# ankishell

./: .gitignore  pyproject.toml
src/ankishell/: server.py
